; ModuleID = '/home/carl/AnghaBench/h2o/deps/hiredis/extr_hiredis.c_redisCommandArgv.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/hiredis/extr_hiredis.c_redisCommandArgv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REDIS_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @redisCommandArgv(i32* %0, i32 %1, i8** %2, i64* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8**, align 8
  %9 = alloca i64*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8** %2, i8*** %8, align 8
  store i64* %3, i64** %9, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i8**, i8*** %8, align 8
  %13 = load i64*, i64** %9, align 8
  %14 = call i64 @redisAppendCommandArgv(i32* %10, i32 %11, i8** %12, i64* %13)
  %15 = load i64, i64* @REDIS_OK, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %4
  store i8* null, i8** %5, align 8
  br label %21

18:                                               ; preds = %4
  %19 = load i32*, i32** %6, align 8
  %20 = call i8* @__redisBlockForReply(i32* %19)
  store i8* %20, i8** %5, align 8
  br label %21

21:                                               ; preds = %18, %17
  %22 = load i8*, i8** %5, align 8
  ret i8* %22
}

declare dso_local i64 @redisAppendCommandArgv(i32*, i32, i8**, i64*) #1

declare dso_local i8* @__redisBlockForReply(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
